# pyLocalEngine

./: .pre-commit-config.yaml  DOCS.md  Makefile  README.md  STATUS.md  TODO.md  USER.md  architecture.md  ci-test.sh  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
examples/: advanced_usage.py  basic_usage.py  benchmark.py  remote_loading.py
localengine/: __init__.py
localengine/core/: __init__.py  engine.py  exceptions.py  file_manager.py  locale_detector.py
locales/: de-DE.xml  en-US.json  es-ES.json  fr-FR.yaml
tests/: test_localengine.py
tools/: migrate.py
